--- a/requirements.txt
+++ b/requirements.txt
@@ -75,8 +75,6 @@ protobuf==4.25.4
 pyarrow==17.0.0
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
-PyAudio==0.2.14
-pycparser==2.22
 pydantic==2.8.2
 pydantic_core==2.20.1
 pydeck==0.9.1
@@ -134,3 +132,5 @@ watchdog==4.0.2
 weasel==0.4.1
 Werkzeug==3.1.3
 wrapt==1.17.0
+soundfile==0.12.1
+pydub==0.25.1
