--- a/requirements.txt
+++ b/requirements.txt
@@ -133,6 +133,6 @@ weasel==0.4.1
 Werkzeug==3.1.3
 wrapt==1.17.0
 soundfile==0.12.1
-pydub==0.25.1
-sounddevice==0.4.6  # Added for microphone recording support
-PyPDF2==2.7.0
+#pydub==0.25.1
+#sounddevice==0.4.6  # Added for microphone recording support
+
